# wallytutor.github.io

./: .gitignore  README.md  index.html  index.qmd  publish.ps1  publish.py  pyproject.toml  toc-shorts.html  toc-shorts.qmd
_assets/: index.css
curriculum/: curriculum.html  curriculum.qmd
curriculum/_assets/: curriculum.css  curriculum.lua  curriculum.typ
physics/: common.typ  config.toml  dynamics-and-relativity-1.typ
shorts/: .gitignore  chemical-plant-mpc.html  chemical-plant-mpc.qmd  how-will-i-finish.html  how-will-i-finish.qmd  index.qmd  julia-steady-conduction.html  julia-steady-conduction.qmd  julia-transient-heat-transfer.html  julia-transient-heat-transfer.qmd  physics-and-neural-nets.html  recursive-mean.html  recursive-mean.qmd  scientific-computing.html  scientific-computing.qmd
shorts/how-will-i-finish/: details.json  final.json  runners.json
shorts/julia-shared/: Manifest.toml  Project.toml
shorts/scripts/: utmb_index.py
toc-shorts_files/libs/bootstrap/: bootstrap-722047e679acb88da24be574fc0b82c8.min.css
